--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="light-style layout-menu-fixed layout-compact" dir="ltr" data-theme="theme-default"
   data-assets-path="../assets/" data-template="vertical-menu-template-free">
->
 
 <head>
   <meta charset="UTF-8" />
@@ -31,6 +30,8 @@
   <link rel="stylesheet" href="/assets/vendor/css/core.css" class="template-customizer-core-css" />
   <link rel="stylesheet" href="/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
   <link rel="stylesheet" href="/assets/css/demo.css" />
+  <link rel="stylesheet" href="../assets/vendor/css/pages/page-auth.css" />
+  <link rel="stylesheet" href="../assets/vendor/css/pages/page-misc.css" />
 
   <!-- Vendors CSS -->
   <link rel="stylesheet" href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
@@ -65,6 +66,7 @@
 
   <!-- Main JS -->
   <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/ui-toasts.js"></script>
 
   <!-- Page JS -->
   <script src="/assets/js/dashboards-analytics.js"></script>
