chore: add meta tags into main html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta charset="utf-8" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Transforming the Sneat Admin Template HTML into a dynamic and modern React Vite application. Explore powerful features and a sleek UI for efficient app management.">
+  <meta name="keywords" content="Sneat, Admin Template, React Vite, Web Development, UI, App Management">
+  <meta name="author" content="Your Name">
 
   <title>
     Dashboard - Analytics | Sneat - Bootstrap 5 React Admin Template - Free
